Implementazione gestione delle eccezioni +Custom Exceptions ~classi DAO per usare custom exceptions